# agentwire

./: .gitignore  README.md  pyproject.toml
docs/: design.md
examples/: code_gen_loop.py  intelligent_router.py  research_agent.py
src/agentwire/: __init__.py  agent.py  context.py  engine.py  observability.py  state.py  step.py  trace.py  types.py  workflow.py
tests/: test_agent.py  test_context.py  test_engine.py  test_observability.py  test_state.py  test_step.py  test_trace.py  test_types.py  test_workflow.py
