[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwire-agents"
version = "0.1.0"
description = "Lightweight, deterministic multi-agent orchestration engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tushar Khandelwal" }]
keywords = ["agents", "orchestration", "workflow", "dag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "anyio>=4.0,<5.0",
    "structlog>=23.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentwire"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["agentwire"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
