[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwire"
version = "0.1.0"
description = "Lightweight, deterministic multi-agent orchestration engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tushar Khandelwal" }]
keywords = ["agents", "orchestration", "workflow", "dag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "anyio>=4.0,<5.0",
    "structlog>=23.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentwire"]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "D",       # no docstrings required in tests
    "ANN",     # no type annotations required in tests
    "PLR2004", # magic values are fine in tests
    "TRY",     # exception style rules relaxed in tests
    "EM",      # exception messages relaxed in tests
    "S110",    # try-except-pass fine in tests
    "FBT003",  # boolean positional args fine in tests
]
"examples/**/*.py" = [
    "T201",    # print is fine in examples
    "D102",    # run() docstrings covered by class docstring
    "INP001",  # examples/ is not a package
]

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["agentwire"]

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
